2014-05-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <--show-options>: Avoid loading
	extra node if we came here from a dir entry.

2014-05-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_get_menu_entry_by_label): New argument
	for sloppy menu reading.

	* info/info.c (get_initial_file): Calls to lookup_dir_entry updated.
	Try reading dir files sloppily if no exact match was found.  Function
	reorganized.
	(add_initial_nodes, main): Handle case when we were invoked
	like "--node (emacs)Buffers".
	(info_find_matching_files): Check for dir entries as well.

	* info/dir.c (lookup_dir_entry): New argument for whether to search
	inexactly.  Callers updated.
	(dir_entry_of_infodir): New function.

	* info/session.c (entry_in_menu): Removed.  Caller in
	info_intuit_options_node updated.
	(info_win_find_node): Null check.

	* info/filesys.c (info_add_extension): No longer static.

2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (create_internal_info_help_node): Show program
	version in help window.
	
	* info/session.c (info_info_version): New command to show version
	of program.
	* NEWS,
	* doc/info-stnd.texi (Miscellanous Commands): Document "M-x
	info-version".

2014-05-25  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (Invoking info): tweaks to invocation examples;
	mention GROFF_SGR, etc.

2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (window_new_screen_size): Call forget_window_and_nodes
	instead of window_deletion_notifier.
	(window_deletion_notifier): Removed.
	* info/session.c (initialize_window_session): Don't set
	window_deletion_notifier to forget_window_and_nodes.

	* info/window.c (window_physical_lines): Delete unused.

	* info/session.c (internal_next_line): Delete unused.
	(info_menu_digit): Formatting.

2014-05-25  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* info/session.c (info_scroll_forward, info_scroll_backward)